// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`should render correctly in mobile unit is not inches 1`] = `
<div>
  <div>
    mock-object-panel-number-item
    <br />
    id:
    rounded-corner
    label:
    Rounded corner
    min:
    0
    max:
    9007199254740991
    decimal:
    value:
    1
    unit:
    mm
    hasMultiValue:
    false
    <input />
  </div>
</div>
`;

exports[`should render correctly unit is inches 1`] = `
<div>
  <div>
    <div
      class="rounded-corner"
    >
      <div
        class="label"
        title="Rounded corner"
      >
        <svgr-url />
      </div>
      <div
        class="option-input ui ui-control-unit-input-v2"
      >
        <input
          step="1"
          type="text"
          value="0.0000"
        />
        <span
          class="unit"
        >
          in
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render correctly unit is not inches 1`] = `
<div>
  <div>
    <div
      class="rounded-corner"
    >
      <div
        class="label"
        title="Rounded corner"
      >
        <svgr-url />
      </div>
      <div
        class="option-input ui ui-control-unit-input-v2"
      >
        <input
          step="1"
          type="text"
          value="1.00"
        />
        <span
          class="unit"
        >
          mm
        </span>
      </div>
    </div>
  </div>
</div>
`;
